<resources>
    <string name="app_name">TestMega</string>
    <string name="text0">

বার্সেলোনায় ‘ফিরলেন’ নেইমার
    </string>
    <string name="text1">
        এখনো বার্সেলোনা সঙ্গে ‘লেনদেন’ বাকি আছে নেইমারের। ছবি : এএফপি


    </string>

    <string name="text2">
        না, শিরোনামে ভুল কিছু নেই। আসলেই বার্সেলোনায় ফিরেছেন নেইমার। তবে এতটুকু পড়েই আশাবাদী
        হওয়ার কোনো কারণ নেই।...


    </string>

    <string name="text02">
        চোটাক্রান্ত মেসির জায়গায় মাঠে দলটার হাল ধরতে আসছেন না নেইমার,
        আসছেন না ভুবন-ভোলানো খেলার জাদুতে কাতালান ক্লাবটির দর্শকদের মুগ্ধ করতে। উল্টো নেইমারের
        আগমন বার্সেলোনার কর্তাব্যক্তিদের কপালের ভাঁজ আরও বাড়িয়ে দেবে, তা নিশ্চিত। ক্যাম্প ন্যুর
        মাঠে নয়,
        বরং বার্সেলোনার আদালতে নিজের ‘খেল’ দেখাতে এসেছেন নেইমার।

একটু খোলাসা করে বলা যাক। ঘটনাটা ২০১৬ সালের অক্টোবরের। তখন মেসি-সুয়ারেজদের সঙ্গে বার্সেলোনাতেই
        খেলতেন নেইমার। সুখেই ছিলেন। লিগ জিতেছেন, জিতেছেন চ্যাম্পিয়নস লিগ। মেসির পর দলের হাল
        নেইমারই ধরবেন, এ আশায় বার্সা সে সময়ে নেইমারের চুক্তি নবায়ন করেছিল। বলা হচ্ছিল, নতুন
        চুক্তি অনুযায়ী ২০২২ সাল পর্যন্ত বার্সেলোনায় থাকবেন নেইমার। চুক্তির একটা শর্ত ছিল,
        চুক্তির পুরোটা সময় অন্যান্য ক্লাবের আগ্রহ ও ডাক অগ্রাহ্য করে নেইমার বার্সেলোনায় থেকে
        গেলে, নেইমার ৪০ মিলিয়ন ইউরো ‘আনুগত্য বোনাস’ পাবেন। অর্থাৎ বার্সেলোনার প্রতি নিজের
        আনুগত্য প্রমাণ করার একটা পুরস্কার পাবেন।


    </string>

    <string name="text3">
         আরও খবর »
    </string>

    <string name="text4">
        বাংলাদেশের ফাইনালে ওঠার লড়াই দেখুন এখানে
    </string>
    <string name="text5">

        গ্রুপ রানার্সআপ হয়ে সেমিফাইনালে উঠেছে বাংলাদেশ। বাফুফে ফাইল ছবি
    </string>

    <string name="text6">
      অনূর্ধ্ব-১৮ সাফ চ্যাম্পিয়নশিপের সেমিফাইনালে ...
    </string>

    <string name="text06">


আজ ভুটানের মুখোমুখি হচ্ছে বাংলাদেশ। টুর্নামেন্টটি অনুষ্ঠিত হচ্ছে নেপালের রাজধানী কাঠমান্ডুতে। ভুটানের বিপক্ষে ম্যাচটি সরাসরি দেখুন এখানে :

    </string>


</resources>
