<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="1dp"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"

        android:layout_rowWeight="1"

        android:background="@color/background1"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:id="@+id/layer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="2dp"
            android:orientation="vertical">


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text0"
                android:textSize="16sp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/neymar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/text1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:text="@string/text2" />

            <Button
                android:id="@+id/buttonId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/text3"
                android:textSize="16sp"
                android:layout_marginBottom="0dp"
                android:textStyle="bold" />





        </LinearLayout>


   </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"

        android:layout_rowWeight="1"
        android:background="@color/background1"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/text4" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/bafua" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/text5" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"

                android:text="@string/text6" />

            <Button
                android:id="@+id/button2Id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/text3"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>